--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="styles.css"/>
-<title> HTML/CSS - QUETE DATA </title>
+<title> HTML/CSS - Bis  </title><!-- modify title-->
 <meta charset="UTF-8">
 </head>
 
@@ -11,6 +11,8 @@
 <p> Et voilà le texte de la page</p>
 <h2>Les Data Analyst ces génies incompris </h2>
 <p> Et voici un autre paragraphe </p> 
+<!-- other -->
+    <p> new text</p>
 <a class="link" href= "http://www.wildcodeschool.com"> Viens nous rejoindre </a>
 
 <figure class="container-flex">
