--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <p> Et voici un autre paragraphe </p> 
 <!-- other -->
     <p> new text</p>
+    <!-- other -->
+    <p> new text</p>
 <a class="link" href= "http://www.wildcodeschool.com"> Viens nous rejoindre </a>
 
 <figure class="container-flex">
